[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/fields/level1.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PressStart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://scenes/bricks/Red_Brick.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/bricks/Blue_Brick.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/bricks/Yellow_Brick.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/bricks/Green_Brick.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sfx/coin.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/ball2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/exitopened.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.9375, 348 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.625, 348 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 232.5, 12 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 63, 12 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 37.5, 5.5625 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 334.5, 13 )

[sub_resource type="QuadMesh" id=9]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 37.5, 6.75 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 304.0
margin_right = 976.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true

[node name="LeftHUD" type="Control" parent="."]
margin_right = 304.0
margin_bottom = 720.0

[node name="CreditsLabel" type="Label" parent="LeftHUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 224.0
custom_fonts/font = SubResource( 11 )
text = "CREDITS"

[node name="CreditsLabel2" type="Label" parent="LeftHUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = -32.0
margin_right = 288.0
custom_fonts/font = SubResource( 11 )
text = "#"

[node name="ScoreLabel" type="Label" parent="LeftHUD"]
margin_left = 16.0
margin_top = 48.0
margin_right = 136.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "SCORE"

[node name="ScoreLabel2" type="Label" parent="LeftHUD"]
margin_left = 16.0
margin_top = 72.0
margin_right = 136.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="HiScoreLabel" type="Label" parent="LeftHUD"]
margin_left = 16.0
margin_top = 192.0
margin_right = 136.0
margin_bottom = 216.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "HIGH SCORE"

[node name="HiScoreLabel2" type="Label" parent="LeftHUD"]
margin_left = 16.0
margin_top = 216.0
margin_right = 160.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="RightHUD" type="Control" parent="."]
margin_left = 976.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="TimeLabel" type="Label" parent="RightHUD"]
margin_left = 32.0
margin_top = 80.0
margin_right = 128.0
margin_bottom = 104.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "TIME"

[node name="TimeLabel2" type="Label" parent="RightHUD"]
margin_left = 32.0
margin_top = 107.0
margin_right = 152.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ComboLabel" type="Label" parent="RightHUD"]
visible = false
margin_left = 32.0
margin_top = 208.0
margin_right = 128.0
margin_bottom = 232.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "COMBO"

[node name="ComboLabel2" type="Label" parent="RightHUD"]
visible = false
margin_left = 32.0
margin_top = 235.0
margin_right = 152.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 7 )
text = "x0"

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 316.062, 372 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 962.625, 372 )
shape = SubResource( 2 )

[node name="UpLeft" type="CollisionShape2D" parent="Walls"]
position = Vector2( 539.5, 12 )
shape = SubResource( 3 )

[node name="UpRight" type="CollisionShape2D" parent="Walls"]
position = Vector2( 910, 12 )
shape = SubResource( 10 )

[node name="Exit" type="CollisionShape2D" parent="Walls"]
position = Vector2( 809.5, 18.4375 )
shape = SubResource( 12 )

[node name="FallZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallZone"]
position = Vector2( 638.5, 741 )
shape = SubResource( 5 )

[node name="Bricks" type="Node2D" parent="."]

[node name="RedBrick1" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 368, 192 )

[node name="RedBrick2" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 436, 192 )

[node name="RedBrick3" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 504, 192 )

[node name="RedBrick4" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 572, 192 )

[node name="RedBrick5" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 640, 192 )

[node name="RedBrick6" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 708, 192 )

[node name="RedBrick7" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 776, 192 )

[node name="RedBrick8" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 844, 192 )

[node name="RedBrick9" parent="Bricks" instance=ExtResource( 6 )]
position = Vector2( 912, 192 )

[node name="BlueBrick" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 368, 221 )

[node name="BlueBrick2" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 436, 221 )

[node name="BlueBrick3" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 504, 221 )

[node name="BlueBrick4" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 572, 221 )

[node name="BlueBrick5" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 640, 221 )

[node name="BlueBrick6" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 708, 221 )

[node name="BlueBrick7" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 776, 221 )

[node name="BlueBrick8" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 844, 221 )

[node name="BlueBrick9" parent="Bricks" instance=ExtResource( 7 )]
position = Vector2( 912, 221 )

[node name="GreenBrick" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 368, 250 )

[node name="GreenBrick2" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 436, 250 )

[node name="GreenBrick3" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 504, 250 )

[node name="GreenBrick4" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 572, 250 )

[node name="GreenBrick5" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 640, 250 )

[node name="GreenBrick6" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 708, 250 )

[node name="GreenBrick7" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 776, 250 )

[node name="GreenBrick8" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 844, 250 )

[node name="GreenBrick9" parent="Bricks" instance=ExtResource( 9 )]
position = Vector2( 912, 250 )

[node name="YellowBrick" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 368, 278 )

[node name="YellowBrick2" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 436, 278 )

[node name="YellowBrick3" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 504, 278 )

[node name="YellowBrick4" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 572, 278 )

[node name="YellowBrick5" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 640, 278 )

[node name="YellowBrick6" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 708, 278 )

[node name="YellowBrick7" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 776, 278 )

[node name="YellowBrick8" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 844, 278 )

[node name="YellowBrick9" parent="Bricks" instance=ExtResource( 8 )]
position = Vector2( 912, 278 )

[node name="Exit" type="Area2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="Exit"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 809.5, 11.9375 )
scale = Vector2( 75, 24.125 )
mesh = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 809.5, 5.25 )
shape = SubResource( 8 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 704 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 384 )

[node name="Credit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="BrickBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="ExitOpened" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="ComboTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="lost" from="." to="Ball" method="_on_Game_lost"]
[connection signal="body_exited" from="FallZone" to="." method="_on_FallZone_body_exited"]
[connection signal="body_exited" from="Exit" to="." method="_on_Exit_body_exited"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
